--- a/index.css
+++ b/index.css
@@ -11,3 +11,21 @@
     padding: 0.5rem;
     margin: 0.5rem;
 }
+.cards{
+    height: 350px;
+    width: 260px;
+    border: 1px solid black;
+    margin: 10px;
+    padding: 10px;
+}
+.cards>img{
+    height:170px;
+    width: 100%;
+}
+.cardsBody{
+    margin-top: 1rem;
+    border: 1px solid black;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
