--- a/index.css
+++ b/index.css
@@ -12,11 +12,12 @@
     margin: 0.5rem;
 }
 .cards{
-    height: 350px;
+    height: 380px;
     width: 260px;
     border: 1px solid black;
     margin: 10px;
     padding: 10px;
+    letter-spacing: 2px;
 }
 .cards>img{
     height:170px;
