--- a/index.css
+++ b/index.css
@@ -56,8 +56,40 @@
     height: 100%;
     width: 100%;
 }
+.searchbar{
+    margin-top: 25px;
+}
+.searchbar>input{
+    width: 300px;
+    height: 30px;
+    font-size: 1rem;
+    font-family: Exo2;
+    letter-spacing: px;
+}
+.searchbar>button{
+    width: 100px;
+    height: 40px;
+    margin-left: 10px;
+    font-size: 1rem;
+    font-family: Exo2;
+    letter-spacing: 1px;
+    background: #00815e;
+    color: #ddd;
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 2px );
+    -webkit-backdrop-filter: blur( 2px );
+    border-radius: 20px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    transition: all 0.3s ease-in-out;
+}
+.searchbar>button:hover{
+    cursor: pointer;
+    color: #F0F0F0;
+    background-color: #018d68;
+    border-radius: 5px;
+}
 .cards{
-    height: 380px;
+    height: auto;
     width: 260px;
     margin: 10px;
     padding: 10px;
@@ -72,7 +104,7 @@
     
 }
 .cards:hover{
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    box-shadow: rgba(0, 0, 0, 1) 0px 3px 8px;
     cursor: pointer;
 }
 .cards>img{
