--- a/index.css
+++ b/index.css
@@ -102,7 +102,7 @@ a{
     border-radius: 5px;
 }
 .cards{
-    height: 350px;
+    height: auto;
     width: 260px;
     margin: 10px;
     padding: 10px;
