--- a/index.css
+++ b/index.css
@@ -19,6 +19,7 @@
   border-radius: 10px;
   border: 1px solid rgba(0, 0, 0, 0.18);
   margin-bottom: 50px;
+  padding-right: 30px;
 }
 .navMenu1 > ul {
   display: flex;
