--- a/index.css
+++ b/index.css
@@ -1,197 +1,3 @@
-@font-face {
-  font-family: Teko;
-  src: url(./src/assets/fonts/Teko-Regular.ttf);
-}
-@font-face {
-  font-family: Exo2;
-  src: url(./src/assets/fonts/Exo2-Regular.ttf);
-}
-.header {
-  display: flex;
-  justify-content: space-between;
-  font-family: Teko;
-  font-size: 1.5rem;
-  color: #f0f0f0;
-  background: rgba(0, 0, 0, 0.85);
-  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
-  backdrop-filter: blur(20px);
-  -webkit-backdrop-filter: blur(20px);
-  border-radius: 10px;
-  border: 1px solid rgba(0, 0, 0, 0.18);
-  margin-bottom: 50px;
-  padding-right: 30px;
-}
-.navMenu1 > ul {
-  display: flex;
-  list-style: none;
-}
-.navMenu1 > ul > li > a {
-  text-decoration: none;
-  color: #f0f0f0;
-}
-.navMenu2 > ul > li > a {
-  text-decoration: none;
-  color: #f0f0f0;
-}
-a {
-  text-decoration: none;
-  color: black;
-}
-.navMenu2 > ul {
-  display: flex;
-  list-style: none;
-}
-.logo {
-  height: 85px;
-  width: 107px;
-}
-.navMenu1 > ul > li {
-  margin: 0px 100px 0px 10px;
-  transition: all 0.2s ease-in-out;
-}
-.navMenu2 > ul > li {
-  margin: 0px 100px 0px 10px;
-  transition: all 0.2s ease-in-out;
-}
-.navMenu2 > ul > li > a:hover {
-  color: #00815e;
-}
-.navMenu2 > ul:hover {
-  cursor: pointer;
-}
-.navMenu1 > ul > li > a:hover {
-  color: #00815e;
-}
-.navMenu1 > ul:hover {
-  cursor: pointer;
-}
-.logo > img {
-  height: 100%;
-  width: 100%;
-}
-.searchbar {
-  margin-top: 25px;
-}
-.searchbar > input {
-  width: 300px;
-  height: 30px;
-  font-size: 1rem;
-  font-family: Exo2;
-  letter-spacing: px;
-}
-.searchbar > button {
-  width: 100px;
-  height: 40px;
-  margin-left: 10px;
-  font-size: 1rem;
-  font-family: Exo2;
-  letter-spacing: 1px;
-  background: #00815e;
-  color: #ddd;
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(2px);
-  -webkit-backdrop-filter: blur(2px);
-  border-radius: 20px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
-  transition: all 0.3s ease-in-out;
-}
-.searchbar > button:hover {
-  cursor: pointer;
-  color: #f0f0f0;
-  background-color: #018d68;
-  border-radius: 5px;
-}
-.cards {
-  height: auto;
-  width: 260px;
-  margin: 10px;
-  padding: 10px;
-  font-family: Exo2;
-  background: rgba(255, 255, 255, 0.25);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
-  border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
-  transition: all 0.2s ease-in-out;
-}
-.cards:hover {
-  box-shadow: rgba(0, 0, 0, 1) 0px 3px 8px;
-  cursor: pointer;
-}
-.cards > img {
-  height: 170px;
-  width: 100%;
-}
-.cardsBody {
-  margin-top: 1rem;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-.cardsShimmer {
-  height: 380px;
-  width: 260px;
-  margin: 10px;
-  padding: 10px;
-  animation-duration: 2.2s;
-  animation-fill-mode: forwards;
-  animation-iteration-count: infinite;
-  animation-name: shimmer;
-  animation-timing-function: linear;
-  background: #ddd;
-  background: linear-gradient(to right, #f6f6f6 8%, #f0f0f0 18%, #f6f6f6 33%);
-  background-size: 1200px 100%;
-}
-
-@-webkit-keyframes shimmer {
-  0% {
-    background-position: -100% 0;
-  }
-  100% {
-    background-position: 100% 0;
-  }
-}
-
-@keyframes shimmer {
-  0% {
-    background-position: -1200px 0;
-  }
-  100% {
-    background-position: 1200px 0;
-  }
-}
-.fullDetails {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-.Details {
-  margin-right: 500px;
-}
-.buy {
-  border-radius: 28px;
-  font-family: Arial;
-  color: #ffffff;
-  font-size: 30px;
-  padding: 10px 20px 10px 20px;
-  text-decoration: none;
-  background: rgba(199, 16, 101, 0.65);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(10.5px);
-  -webkit-backdrop-filter: blur(10.5px);
-  border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
-  transition: all 0.3s ease-in-out;
-}
-.buy:hover {
-  cursor: pointer;
-  border-radius: 28px;
-  background: #7f17b3;
-  background-image: -webkit-linear-gradient(top, #7f17b3, #8719b3);
-  background-image: -moz-linear-gradient(top, #7f17b3, #8719b3);
-  background-image: -ms-linear-gradient(top, #7f17b3, #8719b3);
-  background-image: -o-linear-gradient(top, #7f17b3, #8719b3);
-  background-image: linear-gradient(to bottom, #7f17b3, #8719b3);
-  text-decoration: none;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
